--- a/package.json
+++ b/package.json
@@ -18,37 +18,37 @@
     "watch:docs": "typedoc --watch"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
+    "@eslint/js": "^9.25.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-legacy": "^6.0.2",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "browser-sync": "^3.0.3",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.1.1",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-legacy": "^6.1.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "browser-sync": "^3.0.4",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
-    "eslint-plugin-react-dom": "^1.38.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-react-x": "^1.38.2",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.1",
+    "eslint-plugin-react-dom": "^1.48.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-x": "^1.48.5",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.0",
-    "typedoc": "^0.28.1",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.3.0",
+    "tailwindcss": "^4.1.4",
+    "typedoc": "^0.28.3",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.31.0",
+    "vite": "^6.3.3",
     "vite-plugin-browser-sync": "^4.0.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
