--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "clean": "rimraf --glob **/node_modules **/dist **/.turbo **/package-lock.json **/pnpm-lock.yaml **/yarn.lock"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "turbo": "^2.5.4",
-    "typescript": "5.8.3"
+    "typescript": "catalog:"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.13.1",
   "engines": {
     "node": ">=18"
   }
