--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,11 +7,12 @@
     "./base": "./base.js",
     "./node": "./node.js",
     "./web": "./web.js",
-    "./react": "./react.js"
+    "./react": "./react.js",
+    "./vite-react": "./vite-react.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.0",
-    "eslint": "^9.30.0",
+    "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
