--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -4,5 +4,5 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo"
   },
-  "include": ["vite.config.ts", "eslint.config.js"]
+  "include": ["vite.config.ts"]
 }
