--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,12 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
 
 catalog:
-  typescript: "^5.8.3"
-  eslint: "^9.30.0"
+  '@types/react': 19.1.0
+  '@types/react-dom': 19.1.1
+  eslint: ^9.30.0
+  react: ^19.1.0
+  react-dom: ^19.1.0
+  tailwindcss: 4.1.11
+  typescript: ^5.8.3
