finishing setting up tailiwndcss/Vite/shadcn combo

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,19 +11,22 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@workspace/ui": "workspace:*",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-legacy": "^7.0.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "browser-sync": "^3.0.4",
     "eslint": "catalog:",
+    "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "^7.0.4",
     "vite-plugin-browser-sync": "^4.0.0",
