--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,15 @@
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.5"
+  },
   "devDependencies": {
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
@@ -21,10 +30,5 @@
     "eslint": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
-  },
-  "dependencies": {
-    "react": "catalog:",
-    "react-dom": "catalog:",
-    "tw-animate-css": "^1.3.5"
   }
 }
