--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
+    "tailwindStylesheet": "./apps/web/src/style/index.css",
     "plugins": ["prettier-plugin-tailwindcss"],
     "tailwindFunctions": ["clsx","tw"],
     "tailwindPreserveWhitespace": true,
