--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
+    "typedoc": "typedoc",
     "clean": "rimraf --glob **/node_modules **/dist **/.turbo **/package-lock.json **/pnpm-lock.yaml **/yarn.lock"
   },
   "devDependencies": {
@@ -14,6 +15,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
     "turbo": "^2.5.5",
+    "typedoc": "^0.28.7",
     "typescript": "catalog:"
   },
   "packageManager": "pnpm@10.13.1",
