--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+    "//#typedoc": {
+      "dependsOn": [],
+      "outputs": ["docs/**"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
